# datafusion-materialized-views

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  licenserc.toml  release-plz.toml
.github/workflows/: ci.yml
src/: lib.rs  materialized.rs  rewrite.rs
src/materialized/: dependencies.rs  file_metadata.rs  hive_partition.rs  row_metadata.rs  util.rs
src/rewrite/: exploitation.rs  normal_form.rs  util.rs
tests/: materialized_listing_table.rs
