# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-materialized-views"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/datafusion-contrib/datafusion-materialized-views"
repository = "https://github.com/datafusion-contrib/datafusion-materialized-views"
authors = ["Matthew Cramerus <matt@polygon.io>"]
license = "Apache-2.0"
description = "Materialized Views & Query Rewriting in DataFusion"
keywords = ["arrow", "arrow-rs", "datafusion"]
rust-version = "1.80"

[dependencies]
arrow = "53"
arrow-schema = "53"
async-trait = "0.1"
dashmap = "6"
datafusion = "43"
datafusion-common = "43"
datafusion-expr = "43"
datafusion-functions = "43"
datafusion-functions-aggregate = "43"
datafusion-optimizer = "43"
datafusion-physical-expr = "43"
datafusion-physical-plan = "43"
datafusion-sql = "43"
futures = "0.3"
itertools = "0.13"
log = "0.4"
object_store = "0.11"
ordered-float = "4.6.0"

[dev-dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
tempfile = "3.14.0"
tokio = "1.42.0"
url = "2.5.4"
