# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-materialized-views"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/datafusion-contrib/datafusion-materialized-views"
repository = "https://github.com/datafusion-contrib/datafusion-materialized-views"
authors = ["Matthew Cramerus <matt@polygon.io>"]
license = "Apache-2.0"
description = "Materialized Views & Query Rewriting in DataFusion"
keywords = ["arrow", "arrow-rs", "datafusion"]
rust-version = "1.80"

[dependencies]
arrow = "54"
arrow-schema = "54"
async-trait = "0.1"
dashmap = "6"
datafusion = "46"
datafusion-common = "46"
datafusion-expr = "46"
datafusion-functions = "46"
datafusion-functions-aggregate = "46"
datafusion-optimizer = "46"
datafusion-physical-expr = "46"
datafusion-physical-plan = "46"
datafusion-sql = "46"
futures = "0.3"
itertools = "0.14"
log = "0.4"
object_store = "0.11"
ordered-float = "5.0.0"

[dev-dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
tempfile = "3.14.0"
tokio = "1.42.0"
url = "2.5.4"
